frontend/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: frontend-dev
    app.kubernetes.io/name: frontend-dev
  name: frontend-dev
